bug(align):align navbar elements [Fixes #165437626]

--- a/UI/styles/styles2.css
+++ b/UI/styles/styles2.css
@@ -16,7 +16,8 @@ body {
   background-color: black;
   padding: 20px;
   font-size: 20px;
-  height: 30px;
+	height: 30px;
+	text-align: center;
   }
 
 .topnav a {
